--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <html>
 <title>
-    Webflags - Home
+    RemoteFlags - Home
 </title>
 <head>
-<h1>Webflags - Home</h1>    
+<h1>RemoteFlags - Home</h1>    
 </head>    
 <body>
 <p>
 <h3>
 About the project    
 </h3>
-Webflags is a microhosting service, created to host small, frequently updated strings, which can be read from any app, eliminating the need for frequent patches or updates
+RemoteFlags is a microhosting service, created to host small, frequently updated strings, which can be read from any app, eliminating the need for frequent patches or updates
     <br>
-Webflags can hold data such as the latest version of your app or game, and whether or not an update is critical, you may also store up-to-the-minute data such as active users, using our API, which is still in development.
+RemoteFlags can hold data such as the latest version of your app or game, and whether or not an update is critical, you may also store up-to-the-minute data such as active users, using our API, which is still in development.
     <br>
-For example, webflags 12032003 holds a sample string. Or find it by the web address http://webflags.com/flags/12032003.html
+For example, remoteflags.com/Flags/12032003.html holds a sample string. Or find it by the web address http://remoteflags.com/flags/12032003.html
 </p>
 </body>
 </html>
