--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <h3>
 About the project    
 </h3>
-RemoteFlags is a microhosting service, created to host small, frequently updated strings, which can be read from any app, eliminating the need for frequent patches or updates
+RemoteFlag is a microhosting service, created to host small, frequently updated strings, which can be read from any app, eliminating the need for frequent patches or updates
     <br>
-RemoteFlags can hold data such as the latest version of your app or game, and whether or not an update is critical, you may also store up-to-the-minute data such as active users, using our API, which is still in development.
+RemoteFlag can hold data such as the latest version of your app or game, and whether or not an update is critical, you may also store up-to-the-minute data such as active users, using our API, which is still in development.
     <br>
-For example, remoteflags.com/Flags/12032003.html holds a sample string. Or find it by the web address http://remoteflags.com/flags/12032003.html
+For example, remoteflag 12032003 holds a sample string. Or find it by the <a href="http://remoteflags.com/flags/12032003.html"> web address http://remoteflags.com/flags/12032003.html</a>
 </p>
 </body>
 </html>
