--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ RemoteFlag is a microhosting service, created to host small, frequently updated 
     <br>
 RemoteFlag can hold data such as the latest version of your app or game, and whether or not an update is critical, you may also store up-to-the-minute data such as active users, using our API, which is still in development.
     <br>
-For example, remoteflag 12032003 holds a sample string. Or find it by the <a href="http://remoteflags.com/Flags/12032003.html"> web address http://remoteflags.com/flags/12032003.html</a>
+For example, remoteflag 12032003 holds a sample string. Or find it by the <a href="http://remoteflag.com/Flags/12032003.html"> web address http://remoteflag.com/flags/12032003.html</a>
 </p>
 </body>
 </html>
